--- a/ClassicEclipse/Dict/.project
+++ b/ClassicEclipse/Dict/.project
@@ -24,4 +24,11 @@
 		<nature>org.eclipse.cdt.managedbuilder.core.managedBuildNature</nature>
 		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>AList.h</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/List/AList.h</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
